--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>MyResume Bootstrap Template - Index</title>
+    <title>AkshepYadav</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -39,7 +39,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
-  * Template Name: MyResume - v4.7.0
+  * Template Name: akshep - v4.7.0
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
