--- a/index.html
+++ b/index.html
@@ -166,10 +166,7 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Website:</strong>
-                      <span
-                        >www.akshepkietmca.github.io/
-                        akshepyadav.github.io</span
-                      >
+                      <span>https://akshepkietmca.github.io/akshepyadav/</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
