--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Website:</strong>
-                      <span>https://akshepkietmca.github.io/akshepyadav/</span>
+                      <span>www.akshepkietmca.github.io/akshepyadav</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
