--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
               ><i class="bx bx-file-blank"></i> <span>Resume</span></a
             >
           </li>
+          
+          <li>
+            <a href="#about" class="nav-link scrollto"
+              ><i class="bx bx-user"></i> <span>Project</span></a
+            >
+          </li>
 
           <li>
             <a href="#contact" class="nav-link scrollto"
