--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       
       
       <!-- ======= Project Section ======= -->
-      <section id="resume" class="resume">
+      <section id="Project" class="Project">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Projects</h2>
@@ -444,7 +444,7 @@
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
                   <p>
-                    Muradnagar Shivam Vihar, Phase 1, Asalat Nagar,Ghaziabad,
+                    Radheshyam Vihar, Phase 2, Asalat Nagar,Ghaziabad,
                     Uttar Pradesh 201206
                   </p>
                 </div>
