--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </li>
           
           <li>
-            <a href="#about" class="nav-link scrollto"
+            <a href="#Project" class="nav-link scrollto"
               ><i class="bx bx-user"></i> <span>Project</span></a
             >
           </li>
