--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           I'm
           <span
             class="typed"
-            data-typed-items="Andriod Developer, Web Developer, Youtuber, Photographer"
+            data-typed-items=" Web Developer, Graphic Designer, Youtuber, Photographer"
           ></span>
         </p>
         <div class="social-links">
