--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <img src="assets\img\akshep.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <h3 >Web Developer &amp; Youtuber.</h3>
+              <h3 >Web Developer &amp; Graphic Designer.</h3>
               <p class="fst-italic">
                 A passionate frontend developer from India.
               </p>
@@ -188,7 +188,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                      <span>21</span>
+                      <span>22</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -276,7 +276,7 @@
 
             <div class="col-lg-6">
               <div class="progress">
-                <span class="skill">PHP <i class="val">80%</i></span>
+                <span class="skill">React js <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -289,7 +289,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                <span class="skill">Adobe illustrator <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -342,8 +342,7 @@
 
                 <ul>
                   <li>
-                    Muradnagar Shivam Vihar, Phase 1, Asalat Nagar,Ghaziabad,
-                    Uttar Pradesh 201206
+                    D-81 , Block D , Sector 63A , Noida , 201301
                   </li>
                   <li>+91 9359395940</li>
                   <li>akshep9359@gmail.com.com</li>
@@ -366,7 +365,7 @@
               <h3 class="resume-title">Professional Qualifications</h3>
               <div class="resume-item">
                 <h4>Master of Computer Applications (MCA)</h4>
-                <h5>2021 - Present</h5>
+                <h5>2021 - 2023</h5>
                 <p>
                   <em
                     >KIET GROUP OF INSTITUTIONS Delhi-NCR, Meerut Road (NH-58)
@@ -409,8 +408,7 @@
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
                   <p>
-                    Radheshyam Vihar, Phase 2, Asalat Nagar,Ghaziabad,
-                    Uttar Pradesh 201206
+                    D-81 , Block D , Sector 63A , Noida , 201301
                   </p>
                 </div>
 
