--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           
           <li>
             <a href="#Project" class="nav-link scrollto"
-              ><i class="bx bx-user"></i> <span>Project</span></a
+              ><i class="bx bx-user"></i> <span>Designs</span></a
             >
           </li>
 
