--- a/index.html
+++ b/index.html
@@ -407,7 +407,12 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets\img\akshep.jpg" class="img-fluid" alt="" />
+              <img src="assets\img\task1.png" class="img-fluid" alt="" />
+              <img src="assets\img\task.png" class="img-fluid" alt="" />
+              <img src="assets\img\VENN DIAGRAM.gif" class="img-fluid" alt="" />
+              <img src="assets\img\TPYES-OF-RELATION.jpg" class="img-fluid" alt="" />
+              <img src="assets\img\ONE TO ONE FUNCTION.gif" class="img-fluid" alt="" />
+            
             </div>
               </div>
             </div>
