--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@
       
       
        <!-- ======= Resume Section ======= -->
-      <section id="resume" class="resume">
+      <section id="Designs" class="Designs">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
-            <h2>Resume</h2>
+            <h2>Designs</h2>
             <p>
               "Looking forward to working with an MNC and experiencing a
               high-level professional environment."
