--- a/index.html
+++ b/index.html
@@ -396,12 +396,10 @@
           <div class="section-title">
             <h2>Designs</h2>
             <p>
-              "Looking forward to working with an MNC and experiencing a
-              high-level professional environment."
+             “There are three responses to a piece of design – yes, no, and WOW! Wow is the one to aim for.”
             </p>
             <p>
-              "Hard-working,goal-oriented, and a team player seeking an
-              opportunity to incorporate my skills and put them to use."
+              “Don’t worry about people stealing your ideas, worry about the day they stop.”
             </p>
           </div>
 
