--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       <!-- End Resume Section -->
       
       
-       <!-- ======= Resume Section ======= -->
+       <!-- ======= Design ======= -->
       <section id="Designs" class="Designs">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
@@ -405,6 +405,10 @@
 
           <div class="row">
             <div class="col-lg-4">
+              <img src="assets\img\1.png" class="img-fluid" alt="" />
+              <img src="assets\img\2.png" class="img-fluid" alt="" />
+              <img src="assets\img\3.png" class="img-fluid" alt="" />
+              <img src="assets\img\4.png" class="img-fluid" alt="" />
               <img src="assets\img\task1.png" class="img-fluid" alt="" />
               <img src="assets\img\task.png" class="img-fluid" alt="" />
               <img src="assets\img\VENN DIAGRAM.gif" class="img-fluid" alt="" />
