--- a/index.html
+++ b/index.html
@@ -405,7 +405,9 @@
 
           <div class="row">
             <div class="col-lg-4">
+              <div class="column">
               <img src="assets\img\1.png" class="img-fluid" alt="" /></br>
+                 </div>
               <img src="assets\img\2.png" class="img-fluid" alt="" />
               <img src="assets\img\3.png" class="img-fluid" alt="" />
               <img src="assets\img\4.png" class="img-fluid" alt="" />
