--- a/index.html
+++ b/index.html
@@ -405,11 +405,16 @@
 
           <div class="row">
             <div class="col-lg-4">
+              
               <div class="column">
               <img src="assets\img\1.png" class="img-fluid" alt="" /></br>
                  </div>
+              <div class="column">
               <img src="assets\img\2.png" class="img-fluid" alt="" />
+              </div>
+              <div class="column">
               <img src="assets\img\3.png" class="img-fluid" alt="" />
+                </div>
               <img src="assets\img\4.png" class="img-fluid" alt="" />
               <img src="assets\img\task1.png" class="img-fluid" alt="" />
               <img src="assets\img\task.png" class="img-fluid" alt="" />
